Increased margin to allow goalline text to avoid goal line text cutoff

--- a/release/index.css
+++ b/release/index.css
@@ -54,7 +54,8 @@
     stroke-width: 1;
     fill: none; }
   .ngx-charts .goalline-text {
-    font-size: 12px; }
+    font-size: 13px;
+    opacity: 0.4; }
   .ngx-charts .grid-panel rect {
     fill: none; }
   .ngx-charts .grid-panel.odd rect {
