--- a/src/common/base-chart.component.scss
+++ b/src/common/base-chart.component.scss
@@ -77,7 +77,8 @@
   }
 
   .goalline-text {
-    font-size: 12px;
+    font-size: 13px;
+    opacity: 0.4;
   }
 
   .grid-panel {
